syntax = "proto3";

package wice;
option go_package = "riasc.eu/wice/pkg/pb";

import "candidate.proto";
import "common.proto";

enum Reachability {
    NO_REACHABILITY = 0;
    DIRECT_UDP = 1;
    DIRECT_TCP = 2;
    RELAY_UDP = 3;
    RELAY_TCP = 4;
    ROUTED = 5;
}

enum NATType {
    NAT_NFTABLES = 0;
}

enum ProxyType {
    NO_PROXY = 0;
    USER_BIND = 1;
    KERNEL_CONN = 2;
    KERNEL_NAT = 3;
}

message Credentials {
    // ICE username fragment
    string ufrag = 1;

    // ICE password
    string pwd = 2;

    // Flag to indicate that the sending peer requests the credentials of the receiving peer
    bool need_creds = 3;
}

message PresharedKeyEstablishment {
    bytes public_key = 1;
    bytes cipher_text = 2;
}


message ICEInterface {
    NATType nat_type = 1;
    uint32 mux_port  = 2;
    uint32 mux_srflx_port = 3;
}

message ICEPeer {
    ProxyType proxy_type = 1;
    ConnectionState state = 2;

    CandidatePair selected_candidate_pair = 4;
    
    repeated CandidateStats local_candidate_stats = 6;
    repeated CandidateStats remote_candidate_stats = 7;
    repeated CandidatePairStats candidate_pair_stats = 8;
    
    Timestamp last_state_change_timestamp = 9;

    uint32 restarts = 10;
    Reachability reachability = 11;
}
